--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aquesa - Mock Tool</title>
-  <base href="/">
+  <title>Aquesa - Support Tool</title>
+  <base href="/aquesamock/">
   <!-- <base href="/AquesaSupport/"> -->
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <script type="text/javascript" src="assets/appconfig.js"></script>
 </head>
 
 <body>
-<H1>I am a mock website</H1>
-</body>
+  <app-root></app-root>
+  <!-- <script type="text/javascript" src="assets/js/jsutil.js"></script> -->
+  <script type="text/javascript" src="assets/js/networkcodes.js"></script>
+  <!-- <script type="module" src="assets/js/chart.min.js"></script> -->
+  <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js@4.3.0/dist/chart.umd.min.js"></script>
+  <!-- <script type='module" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js" integrity="sha512-7U4rRB8aGAHGVad3u2jiC7GA5/1YhQcQjxKeaVms/bT66i3LVBMRcBI9KwABNWnxOSwulkuSXxZLGuyfvo7V1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
+
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="es2015-polyfills.js" nomodule></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
